kube/load-balancer-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: koncepts-demo-lb
spec:
  selector:
    app: koncepts-demo
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
