kube/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-demo
  labels:
    app: python-demo
spec:
  strategy:
    type: RollingUpdate
  triggers:
  replicas: 1
  selector:
    matchLabels:
      app: python-demo
  template:
    metadata:
      labels:
        app: python-demo
    spec:
      containers:
        - name: python-demo
          image: srowley/python-reverse-debugger:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: python-demo
  name: python-demo
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: python-demo
---
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: python-demo
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip #used to strip path prefix after routing is complete
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: python-demo
              servicePort: 8080
