kube/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: python-demo
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip #used to strip path prefix after routing is complete
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: python-demo
              servicePort: 8080
